adds more hover styles and classes for the panels section. updates styles on buttons and homepage-panels in admissionsHomepage folder. adds compiled main-style.css file

--- a/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepagePanels.html
+++ b/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepagePanels.html
@@ -3,34 +3,56 @@
 	<div class="row panel-row">
 		<a href="#">
 			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/visit.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
-				<button class="btn btn-lg btn-default panel-cta center-block">Visit</button>
+				<button class="btn btn-lg btn-default panel-cta center-block"><span>Visit</span></span></button>
+				<div class="overlay">
+					<p>In the heart of urban denver: go on the MSU Denver Virtual Tour to experience our campus.</p>
+				</div>
 			</div>
 		</a>
 		<a href="#">
 			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/campus-life.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
-				<button class="btn btn-lg btn-default panel-cta center-block">Campus Life</button>
+				<button class="btn btn-lg btn-default panel-cta center-block"><span>Campus Life</span></button>
+				<div class="overlay">
+					<p>In the heart of urban denver: go on the MSU Denver Virtual Tour to experience our campus.</p>
+				</div>
 			</div>
 		</a>
 		<a href="#">
 			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/financial-aid-and-cost.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
-				<button class="btn btn-lg btn-default panel-cta center-block">Cost + Financial Aid</button>
+				<button class="btn btn-lg btn-default panel-cta center-block"><span>Cost + Financial Aid</span></button>
+				<div class="overlay">
+					<p>In the heart of urban denver: go on the MSU Denver Virtual Tour to experience our campus.</p>
+				</div>
 			</div>
 		</a>
 		<a href="#">
 			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/virtual-tour.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
-				<button class="btn btn-lg btn-default panel-cta center-block">Virtual Tour</button>
+				<button class="btn btn-lg btn-default panel-cta center-block"><span>Virtual Tour</span></button>
+				<div class="overlay">
+					<p>In the heart of urban denver: go on the MSU Denver Virtual Tour to experience our campus.</p>
+				</div>
 			</div>
 		</a>
 		<a href="#">
 			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/academic-programs.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
-				<button class="btn btn-lg btn-default panel-cta center-block">Academic Programs</button>
+				<button class="btn btn-lg btn-default panel-cta center-block"><span>Academic Programs</span></button>
+				<div class="overlay">
+					<p>In the heart of urban denver: go on the MSU Denver Virtual Tour to experience our campus.</p>
+				</div>
 			</div>
 		</a>
 		<a href="#">
 			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/bienvenidos.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
-				<button class="btn btn-lg btn-default panel-cta center-block">Bienvenidos</button>
+				<button class="btn btn-lg btn-default panel-cta center-block"><span>Bienvenidos</span></button>
+				<div class="overlay">
+					<p>In the heart of urban denver: go on the MSU Denver Virtual Tour to experience our campus.</p>
+				</div>
 			</div>
 		</a>
 	</div>
+
+	<script>
+
+	</script>
 
 </section>
