adds additional styles for panel element positioning and responsiveness. updates markup with classes and elements. updates homepage-panels.scss and responsive-overrides.scss with new classes. **IMPORTANT** adds new copy task to 'grunt copy' command. now copies media from media folder to www-root and media/admissions-redesign to www-root. adds compiled main-style.css file

--- a/development/terminalfour/src/sass/admissionsHomepage/responsive-overrides.scss
+++ b/development/terminalfour/src/sass/admissionsHomepage/responsive-overrides.scss
@@ -25,6 +25,12 @@
 			padding-bottom: 0px;
 		}
 	}
+
+	section.admissionsHomepagePanels {
+		.overlay-content {
+			top: 28%;
+		}
+	}
 }
 
 @media only screen and (max-width: 767px) {
@@ -55,6 +61,12 @@
 		.application-image-padding {
 			padding-left: 0px;
 			padding-right: 0px;
+		}
+	}
+
+	section.admissionsHomepagePanels {
+		.panel-sizing {
+			height: 67.535vw;
 		}
 	}
 }
