--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -11571,7 +11571,7 @@ h4 {
   width: 100%;
   max-width: 290px;
   position: relative;
-  top: 65%;
+  top: 60%;
 }
 .panel-cta span {
   position: relative;
@@ -11706,6 +11706,20 @@ section.admissionsHomepagePanels .overlay {
 section.admissionsHomepagePanels .overlay:hover {
   opacity: 0.9;
 }
+section.admissionsHomepagePanels .overlay-content {
+  position: relative;
+  top: 38%;
+}
+section.admissionsHomepagePanels .overlay-content p {
+  font-size: 18px;
+  text-transform: uppercase;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  max-width: 387px;
+  word-spacing: 1px;
+  letter-spacing: 1px;
+}
 
 @media only screen and (max-width: 991px) {
   section.admissionsHomepageSlider .carousel-controls {
@@ -11728,6 +11742,10 @@ section.admissionsHomepagePanels .overlay:hover {
   section.admissionsHomepageApply .application-copy {
     padding-top: 15px;
     padding-bottom: 0px;
+  }
+
+  section.admissionsHomepagePanels .overlay-content {
+    top: 28%;
   }
 }
 @media only screen and (max-width: 767px) {
@@ -11753,6 +11771,10 @@ section.admissionsHomepagePanels .overlay:hover {
   section.admissionsHomepageApply .application-image-padding {
     padding-left: 0px;
     padding-right: 0px;
+  }
+
+  section.admissionsHomepagePanels .panel-sizing {
+    height: 67.535vw;
   }
 }
 /** President's page styles **/
