--- a/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepagePanels.html
+++ b/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepagePanels.html
@@ -5,7 +5,9 @@
 			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/visit.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
 				<button class="btn btn-lg btn-default panel-cta center-block"><span>Visit</span></span></button>
 				<div class="overlay">
-					<p>In the heart of urban denver: go on the MSU Denver Virtual Tour to experience our campus.</p>
+					<div class="overlay-content">
+						<p>In the heart of urban denver: go on the MSU Denver Virtual Tour to experience our campus.</p>
+					</div>
 				</div>
 			</div>
 		</a>
@@ -13,7 +15,9 @@
 			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/campus-life.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
 				<button class="btn btn-lg btn-default panel-cta center-block"><span>Campus Life</span></button>
 				<div class="overlay">
-					<p>In the heart of urban denver: go on the MSU Denver Virtual Tour to experience our campus.</p>
+					<div class="overlay-content">
+						<p>In the heart of urban denver: go on the MSU Denver Virtual Tour to experience our campus.</p>
+					</div>
 				</div>
 			</div>
 		</a>
@@ -21,7 +25,9 @@
 			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/financial-aid-and-cost.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
 				<button class="btn btn-lg btn-default panel-cta center-block"><span>Cost + Financial Aid</span></button>
 				<div class="overlay">
-					<p>In the heart of urban denver: go on the MSU Denver Virtual Tour to experience our campus.</p>
+					<div class="overlay-content">
+						<p>In the heart of urban denver: go on the MSU Denver Virtual Tour to experience our campus.</p>
+					</div>
 				</div>
 			</div>
 		</a>
@@ -29,7 +35,9 @@
 			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/virtual-tour.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
 				<button class="btn btn-lg btn-default panel-cta center-block"><span>Virtual Tour</span></button>
 				<div class="overlay">
-					<p>In the heart of urban denver: go on the MSU Denver Virtual Tour to experience our campus.</p>
+					<div class="overlay-content">
+						<p>In the heart of urban denver: go on the MSU Denver Virtual Tour to experience our campus.</p>
+					</div>
 				</div>
 			</div>
 		</a>
@@ -37,7 +45,9 @@
 			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/academic-programs.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
 				<button class="btn btn-lg btn-default panel-cta center-block"><span>Academic Programs</span></button>
 				<div class="overlay">
-					<p>In the heart of urban denver: go on the MSU Denver Virtual Tour to experience our campus.</p>
+					<div class="overlay-content">
+						<p>In the heart of urban denver: go on the MSU Denver Virtual Tour to experience our campus.</p>
+					</div>
 				</div>
 			</div>
 		</a>
@@ -45,7 +55,9 @@
 			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/bienvenidos.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
 				<button class="btn btn-lg btn-default panel-cta center-block"><span>Bienvenidos</span></button>
 				<div class="overlay">
-					<p>In the heart of urban denver: go on the MSU Denver Virtual Tour to experience our campus.</p>
+					<div class="overlay-content">
+						<p>In the heart of urban denver: go on the MSU Denver Virtual Tour to experience our campus.</p>
+					</div>
 				</div>
 			</div>
 		</a>
