--- a/development/terminalfour/src/sass/admissionsHomepage/homepage-panels.scss
+++ b/development/terminalfour/src/sass/admissionsHomepage/homepage-panels.scss
@@ -32,4 +32,20 @@ section.admissionsHomepagePanels {
 	.overlay:hover {
 		opacity: 0.9;
 	}
+
+	.overlay-content {
+		position: relative;
+		top: 38%;
+		p {
+			font-size: 18px;
+			text-transform: uppercase;
+			margin-left: auto;
+			margin-right: auto;
+			width: 100%;
+			max-width: 387px;
+			word-spacing: 1px;
+    		letter-spacing: 1px;
+		}
+		
+	}
 }
