adds additional small refinements to .overlay-content class relative positioning values. adds compiled main-style.css file

--- a/development/terminalfour/src/sass/admissionsHomepage/responsive-overrides.scss
+++ b/development/terminalfour/src/sass/admissionsHomepage/responsive-overrides.scss
@@ -70,3 +70,11 @@
 		}
 	}
 }
+
+@media only screen and (max-width: 767px) {
+	section.admissionsHomepagePanels {
+		.overlay-content {
+			top: 5%;
+		}
+	}
+}
