adds files for eab section including markup, includes, imports and styles. updates font styles including weights, sizes and family for the whole page.

--- a/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepagePanels.html
+++ b/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepagePanels.html
@@ -3,7 +3,7 @@
 	<div class="row panel-row">
 		<a href="#">
 			<div class="col-xs-12 col-sm-6 col-md-6 panel-sizing" style="background: url('style-assets/media/admissions-redesign/visit.jpg') center center no-repeat; background-size: cover; border: 10px solid white;">
-				<button class="btn btn-lg btn-default panel-cta center-block"><span>Visit</span></span></button>
+				<button class="btn btn-lg btn-default panel-cta center-block"><span>Visit</span></button>
 				<div class="overlay">
 					<div class="overlay-content">
 						<p>In the heart of urban denver: go on the MSU Denver Virtual Tour to experience our campus.</p>
