--- a/development/terminalfour/src/sass/admissionsHomepage/homepage-apply.scss
+++ b/development/terminalfour/src/sass/admissionsHomepage/homepage-apply.scss
@@ -16,6 +16,7 @@ section.admissionsHomepageApply {
 		padding-top: 30px;
 		padding-bottom: 25px;
 		font-weight: 500;
+		font-family: $font-family-sans-serif;
 	}
 
 	a.application-link {
