--- a/development/terminalfour/src/sass/main-style.scss
+++ b/development/terminalfour/src/sass/main-style.scss
@@ -60,6 +60,7 @@ header {
 @import "admissionsHomepage/homepage-slider.scss";
 @import "admissionsHomepage/homepage-apply.scss";
 @import "admissionsHomepage/homepage-panels.scss";
+@import "admissionsHomepage/homepage-eab.scss";
 @import "admissionsHomepage/responsive-overrides.scss";
 
 
