--- a/development/terminalfour/src/sass/admissionsHomepage/homepage-panels.scss
+++ b/development/terminalfour/src/sass/admissionsHomepage/homepage-panels.scss
@@ -3,6 +3,7 @@ section.admissionsHomepagePanels {
 		width: 100%;
 		margin-left: auto;
 		margin-right: auto;
+		padding-bottom: 30px;
 	}
 
 	.panel-sizing {
@@ -37,6 +38,7 @@ section.admissionsHomepagePanels {
 		position: relative;
 		top: 36%;
 		p {
+			font-family: $font-family-sans-serif;
 			font-size: 18px;
 			text-transform: uppercase;
 			margin-left: auto;
