--- a/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepageEAB.html
+++ b/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepageEAB.html
@@ -9,7 +9,7 @@
 			<p class="eab-description">
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non id aspernatur velit inventore quis laborum dignissimos autem sequi similique voluptates, repellendus distinctio itaque illum nemo dolorem asperiores voluptatibus laboriosam libero?
 			</p>
-			<ol>
+			<ol class="eab-list">
 				<li>Lorem ipsum dolor amet</li>
 				<li>Consecteteur adispcine elit</li>
 				<li>Sed dla conummy</li>
@@ -17,6 +17,26 @@
 				<li>Consecteteur adispcine elit</li>
 			</ol>
 			<button class="btn btn-lg btn-default btn-primary">Get started</button>
+			<form name="jump" class="eab-form">
+				<select name="menu" class="eab-select" id="thedropdown">
+					<option value="#">Select an option</option>
+					<option value="#1">Link 1</option>
+					<option value="#2">Link 2</option>
+					<option value="#3">Link 3</option>
+				</select>
+				<input type="button" class="eab-cta" name="link" onClick="location=document.jump.menu.options[document.jump.menu.selectedIndex].value;" value="GO">
+			</form>
 		</div>
 	</div>
+	<script>
+		
+		$(document).ready(function(){
+			var value = $('#thedropdown').val();
+		    $("#thedropdown").change(function(){
+		    	value = $('#thedropdown').val()
+		        alert(value);
+		    });
+		});
+
+	</script>
 </section>
