--- a/development/terminalfour/src/sass/admissionsHomepage/homepage-eab.scss
+++ b/development/terminalfour/src/sass/admissionsHomepage/homepage-eab.scss
@@ -47,9 +47,57 @@ section.admissionsHomepageEAB {
 	}
 
 	.eab-form {
-		width: 80%;
-		.eab-select, .eab-cta {
-			width: 49%;
+		width: 100%;
+		.eab-cta {
+			width: 38%;
+		}
+		// .eab-select {
+		// 	padding: 10px 7px;
+		// 	font-size: 16px;
+		// 	color: #00447c;
+		// 	border: #00447c solid 5px;
+  //   		border-radius: 0px;
+  //   		text-align: center;
+  //   		width: 45%;
+  //   		height: 54px;
+		// }
+
+		.custom-select {
+			font-family: $font-family-sans-serif;
+			font-weight: 700;
+			margin-right: 15px;
+		    border: none;
+		    width: 40%;
+		    border-radius: 0px;
+		    display: inline-block;
+		    color: #5e5e5e;
+		    background: #e8e8e8;
+		    &:hover {
+		    	background: #ececec;
+		    }
+		  //   span {
+				// width: 20%;
+		  //   }
+		}
+
+		.custom-select select {
+		    padding: 5px 8px;
+		    width: 100%;
+		    height: 64px;
+		    // margin-left: auto;
+		    // margin-right: auto;
+		    display: block;
+		    border: none;
+		    box-shadow: none;
+		    background: transparent;
+		    background-image: none;
+		    -webkit-appearance: none;
+		    text-align-last:center;
+		    cursor: pointer;
+		}
+
+		.custom-select select:focus {
+		    outline: none;
 		}
 	}
 
