--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -11579,13 +11579,12 @@ h4 {
 }
 
 .eab-cta {
-  margin-top: 20px;
-  padding: 10px 7px;
+  padding: 15px 7px;
   font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  border-color: #00447c;
+  border-color: #e2e2e2;
   border-width: 5px;
-  background: rgba(0, 0, 0, 0);
-  color: #00447c;
+  background: #cccccc;
+  color: #e2e2e2;
   border-radius: 0px;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -11593,6 +11592,13 @@ h4 {
   font-weight: 700;
   text-align: center;
   width: 100%;
+  pointer-events: none;
+  transition: all 0.25s ease;
+}
+.eab-cta:hover {
+  color: #fff !important;
+  background: rgba(0, 68, 124, 0.75) !important;
+  border-color: #00447c !important;
 }
 
 section.admissionsHomepageSlider {
@@ -11784,10 +11790,40 @@ section.admissionsHomepageEAB .eab-list li {
   padding-bottom: 5px;
 }
 section.admissionsHomepageEAB .eab-form {
-  width: 80%;
+  width: 100%;
 }
-section.admissionsHomepageEAB .eab-form .eab-select, section.admissionsHomepageEAB .eab-form .eab-cta {
-  width: 49%;
+section.admissionsHomepageEAB .eab-form .eab-cta {
+  width: 38%;
+}
+section.admissionsHomepageEAB .eab-form .custom-select {
+  font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 700;
+  margin-right: 15px;
+  border: none;
+  width: 40%;
+  border-radius: 0px;
+  display: inline-block;
+  color: #5e5e5e;
+  background: #e8e8e8;
+}
+section.admissionsHomepageEAB .eab-form .custom-select:hover {
+  background: #ececec;
+}
+section.admissionsHomepageEAB .eab-form .custom-select select {
+  padding: 5px 8px;
+  width: 100%;
+  height: 64px;
+  display: block;
+  border: none;
+  box-shadow: none;
+  background: transparent;
+  background-image: none;
+  -webkit-appearance: none;
+  text-align-last: center;
+  cursor: pointer;
+}
+section.admissionsHomepageEAB .eab-form .custom-select select:focus {
+  outline: none;
 }
 
 @media only screen and (max-width: 991px) {
