--- a/development/terminalfour/src/sass/admissionsHomepage/homepage-eab.scss
+++ b/development/terminalfour/src/sass/admissionsHomepage/homepage-eab.scss
@@ -19,6 +19,14 @@ section.admissionsHomepageEAB {
 		border-right: 10px solid white;
 	}
 
+	.eab-content {
+		background: rgba(255, 255, 255, 0.8);
+	    height: 91%;
+	    width: 98%;
+	    margin-top: 3%;
+	    margin-left: 1%; 
+	}
+
 	hr {
 	    display: block;
 	    height: 1px;
