--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -11765,6 +11765,13 @@ section.admissionsHomepageEAB .eab-sizing {
   height: 33.75vw;
   border-right: 10px solid white;
 }
+section.admissionsHomepageEAB .eab-content {
+  background: rgba(255, 255, 255, 0.8);
+  height: 91%;
+  width: 98%;
+  margin-top: 3%;
+  margin-left: 1%;
+}
 section.admissionsHomepageEAB hr {
   display: block;
   height: 1px;
