adds additional style refinements to form elements. adds compiled main-style.css file

--- a/development/terminalfour/src/sass/admissionsHomepage/responsive-overrides.scss
+++ b/development/terminalfour/src/sass/admissionsHomepage/responsive-overrides.scss
@@ -31,6 +31,19 @@
 			top: 28%;
 		}
 	}
+
+	section.admissionsHomepageEAB {
+		.eab-form {
+			.custom-select {
+				width: 60%;
+				margin-right: 10px;
+			}
+			.eab-cta {
+				width: 36%;
+			}
+		}
+	}
+
 }
 
 @media only screen and (max-width: 767px) {
