adds calc property and values for font-size on h2 element for eab section

--- a/development/terminalfour/src/sass/admissionsHomepage/homepage-eab.scss
+++ b/development/terminalfour/src/sass/admissionsHomepage/homepage-eab.scss
@@ -1,12 +1,13 @@
 section.admissionsHomepageEAB {
+	
 	.eab-header {
-	    font-size: 1.75rem;
 	    font-family: $font-family-sans-serif;
     	text-transform: uppercase;
     	letter-spacing: 2px;
     	word-spacing: 1px;
     	width: 100%;
     	max-width: 415px;
+    	font-size: calc(12px + (20 - 12) * ((100vw - 375px) / (991 - 375)));
 	}
 	.eab-row {
 		width: 100%;
