--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -11747,13 +11747,13 @@ section.admissionsHomepagePanels .overlay-content p {
 }
 
 section.admissionsHomepageEAB .eab-header {
-  font-size: 1.75rem;
   font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   letter-spacing: 2px;
   word-spacing: 1px;
   width: 100%;
   max-width: 415px;
+  font-size: calc(12px + (20 - 12) * ((100vw - 375px) / (991 - 375)));
 }
 section.admissionsHomepageEAB .eab-row {
   width: 100%;
